Begin Twitch authentication 3

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     function set_cookies(cookies) {
-        document.cookie = cookies.map((k, v) => k + "=" + v).join("; ") + "; expires=Fri, 31 Dec 9999 23:59:59 GMT; Secure";
+        document.cookie = Object.entries(cookies).map((k, v) => k + "=" + v).join("; ") + "; expires=Fri, 31 Dec 9999 23:59:59 GMT; Secure";
     }
 
     function set_cookie(name, value) {
