--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         span_connected.textContent = valid ? "Connected" : "Disconnected";
     }
 
-    function check_params_access_token() {
+    async function check_params_access_token() {
         const url_fragment = new URLSearchParams(window.location.hash);
         const params = Object.fromEntries(url_fragment.entries());
         if ("#access_token" in params) {
-            if ("state" in params && params["state"] == get_cookie("state")) {
+            if ("state" in params && params["state"] == await get_cookie("state")) {
                 return params["#access_token"];
             }
         }
