Begin Twitch authentication 11

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         const url_fragment = new URLSearchParams(window.location.hash);
         const params = Object.fromEntries(url_fragment.entries());
         if ("#access_token" in params) {
-            if ("state" in params && params["state"] == (await get_cookie("state")).value) {
+            if ("state" in params && params["state"] == await get_cookie("state")) {
                 return params["#access_token"];
             }
         }
@@ -84,7 +84,7 @@
 
     async function on_load()
     {
-        if (!valid && (access_token = (await get_cookie("access_token")).value)) {
+        if (!valid && (access_token = await get_cookie("access_token"))) {
             valid = await validate_twitch(access_token);
         }
 
