--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         connect_with_twitch();
     });
 
-    input_discord_webhook.addEventListener("oninput", (event) => {
+    input_discord_webhook.addEventListener("change", (event) => {
         set_cookie("webhook", event.target.value);
     });
 
