--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     }
 
     async function make_clip(user) {
-        const url = `https://api.twitch.tv/helix/clips?broadcaster_id=${user.id}`;
+        const url = `https://api.twitch.tv/helix/clips?broadcaster_id=${user.id}&has_delay=true`;
         try {
             const response = await fetch(url, {
                 method: "POST",
@@ -138,8 +138,28 @@
     async function make_clips(names) {
         if (names.length <= 0) return;
         const users = await get_users(names);
+        await new Promise(r => setTimeout(r, 1000))
         let results = await Promise.all(users.map(make_clip));
         return results;
+    }
+
+    async function send_webhook(clips) {
+        let data = {
+            "embeds": [{
+                "title": "Multi Clip",
+                "url": "https://tevirasa.github.io/Multi-Clipper/",
+                "color": 3427761,
+                "fields": clips.map(clip => { return { "name": clip.name, "value": clip.clip }; })
+            }]
+        };
+        const response = await fetch(url, {
+            "method": "POST",
+            "headers": { 
+                "Content-Type": "application/json",
+            },
+            "body": JSON.stringify(data)
+        });
+        return response.status;
     }
 
     function get_channel_names() {
@@ -158,6 +178,7 @@
         const names = get_channel_names();
         const clips = await make_clips(names);
         populate_clips(clips);
+        send_webhook(clips);
     });
 
     input_discord_webhook.addEventListener("change", (event) => {
