--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     }
 
     async function send_webhook(clips) {
+        const url = input_discord_webhook.value.trim();
         let data = {
             "embeds": [{
                 "title": "Multi Clip",
